self_hosted/k8s/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - port: 80
      targetPort: 3000
